# AzureDragon-WritingPlatform

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  问题修改.txt  需求说明.txt
deepseek-proxy/: pyproject.toml
deepseek-proxy/src/deepseek_proxy/: anthropic_compat.py  auth.py  compat_main.py  config.py  conversation_tracker.py  deepseek_compat.py  server.py
electron/: main.ts  preload.ts
outline/: 世界观.md  总纲.md  支线.md
public/风格/: 03-鬼吹灯.txt  06-全职高手.txt  08-斗罗大陆.txt
src/: App.vue
src/api/: ai.ts
src/assets/styles/: global.css
src/components/: AppSidebar.vue  ChapterChatPanel.vue  ChapterEditPanel.vue  ChapterGenerationPanel.vue  CreateProjectModal.vue  MarkdownEditor.vue  VolumeOutlinePanel.vue
src/router/: index.ts
src/stores/: ai.ts  app.ts  chapter.ts  character.ts  outline.ts  plothook.ts  project.ts  volume.ts
src/types/: ai.ts  chapter.ts  character.ts  project.ts
src/utils/: builtinStyles.ts  fileAPI.ts  helpers.ts  promptTemplates.ts  wordCount.ts
src/views/: ChapterEditorView.vue  ChaptersView.vue  CharacterDetailView.vue  CharacterGraphView.vue  CharactersView.vue  DeepSeekView.vue  OutlineView.vue  ProjectDetailView.vue  ProjectListView.vue  SettingsView.vue  VolumesView.vue
软著申请资料/: 00_材料清单.md  01_申请表信息.md  02_软件说明书.md  03_源代码文档.txt
风格/: 01-斗破苍穹.txt  02-凡人修仙传.txt  04-诛仙.txt  05-仙逆.txt  07-雪中悍刀行.txt  09-庆余年.txt  10-盗墓笔记.txt
